[package]
name = "lunite"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lunite-server"]

[dependencies]
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0"
colored = "2"
xdg = "2"
edit = "0"

[dev-dependencies]
pretty_assertions = "1.3.0"
