[package]
name = "lunite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.3.2", features = ["chrono_0_4"]}

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",
    "fast-rng",
    "serde",
    "macro-diagnostics",
]
